<resources>
    <string name="app_name">Bantumi</string>

    <string name="txtPlayer1">Jugador 1</string>
    <string name="txtPlayer2">Jugador 2</string>
    <string name="txtBtnReset">Reset</string>

    <!-- Valores del juego -->
    <integer name="intNumInicialSemillas">4</integer>
    <string name="txtInitialScore">0</string>

    <!-- Mensaje opción sin implementar -->
    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage"><p>Cada jugador elige una de sus 6 casillas -que no puede estar vacía-, recoge
        todas las semillas que contenga y las “siembra” una a una en sentido contrario a las agujas del reloj
        en las siguientes casillas del tablero (excepto en el almacén del oponente). Se aplican las siguientes reglas:</p>
        <ul>
            <li>Si la siembra termina en el almacén propio, el jugador vuelve a tener el turno</li>
            <li>Si la siembra termina en una casilla propia que estuviera vacía, se lleva al almacén
                propio la última semilla y las que hubiera en la casilla opuesta del otro jugador</li>
            <li>El juego termina en el momento en que cualquiera de los dos jugadores tenga todas sus
                casillas vacías. Si el contrario dispone de semillas, éstas pasarán al almacén del propietario
                de las casillas</li>
        </ul>
        <p>Gana el jugador que consiga en su almacén el mayor número de semillas</p>
    </string>

    <!-- Preferencias -->
    <string name="txtAjustes">Ajustes</string>
    <string name="txtPreferences">Preferences</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>

    <!-- Restart Restart Match -->
    <string name="txtRestartDialog">¿Desea reiniciar la partida?</string>
    <string name="txtRestartDialogYes">Sí</string>
    <string name="txtRestartDialogNo">No</string>

    <!-- Restart Save Match -->
    <string name="txtSaveMatchDialog">¿Desea guardar la partida actual?</string>
    <string name="txtSaveMatchDialogYes">Sí</string>
    <string name="txtSaveMatchDialogNo">No</string>

    <!-- Restart Reload Match -->
    <string name="txtReloadMatchDialog">¿Desea recuperar la partida actual?</string>
    <string name="txtReloadMatchDialogYes">Sí</string>
    <string name="txtReloadMatchDialogNo">No</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Top ten Scoreboard Match -->
    <string name="txtScoreboard">Top Ten Scoreboard</string>
    <string name="userScore">Tú</string>
    <string name="opponentScore">Rival</string>
    <string name="txtDate">Día</string>
    <string name="txtHour">Hora</string>

    <!-- Bin -->
    <string name="txtPapelera">Papelera</string>
    <string name="txtPapeleraVacia">Papelera vacía</string>

    <!-- Ajustes -->
    <string name="hint_nombre">Nombre...</string>
    <string name="buttonSave">Guardar</string>
    <string name="intSemillas">Semillas...</string>
    <string name="buttonSaveSemillas">Guardar Semillas</string>

    <!-- Preferences -->
    <string name="preferences">Preferencias</string>
    <string name="defaultSemillas">4</string>
    <string name="keySemillas">semillas</string>
    <string name="txtSemillas">Número de Semillas</string>

    <string name="keyPrimerTurno">primerTurno</string>
    <string name="txtPrimerTurno">Cambiar turno inicial</string>
    <string name="txtJugador">Turno inicial del: Jugador</string>
    <string name="txtRival">Turno inicial del: Rival</string>

</resources>