<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin">
    <PreferenceCategory
        android:title="@string/txtPreferences">
        <EditTextPreference
            app:key="@string/intSemillas"
            app:title="@string/txtSemillas"
            android:defaultValue="@string/defaultSemillas"
            app:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:inputType="number"
            android:textSize="18sp"
            android:layout_marginBottom="50dp">
        </EditTextPreference>
        <SwitchPreference
            android:key="@string/keyPrimerTurno"
            android:title="@string/txtPrimerTurno"
            android:summaryOff="@string/txtJugador"
            android:summaryOn="@string/txtRival" />
    </PreferenceCategory>
</PreferenceScreen>